# curso_fastapi

./: README.md  main.py  pyproject.toml
fastapi_course/: main.py  main_old.py
fastapi_course/controllers/: items_controllers.py
fastapi_course/models/: schemas.py
fastapi_course/routers/: router.py
